# solana-clone

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  WHITEPAPER.md  docker-compose.yml
ai/: CLAUDE.md
ai/contract-auditor/: package-lock.json  package.json
ai/contract-auditor/app/: globals.css  layout.tsx  page.tsx
ai/contract-auditor/components/: audit-results.tsx  code-input.tsx
ai/contract-auditor/lib/: auditor.ts
ai/explorer/: package-lock.json  package.json
ai/explorer/app/: globals.css  layout.tsx  page.tsx
ai/explorer/components/: query-result.tsx  search-bar.tsx
ai/explorer/lib/: query-parser.ts  rpc-executor.ts
ai/nft-generator/: package-lock.json  package.json
ai/nft-generator/app/: globals.css  layout.tsx  page.tsx
ai/nft-generator/components/: nft-gallery.tsx  preview-panel.tsx  prompt-input.tsx
ai/nft-generator/lib/: metadata-builder.ts
ai/portfolio-advisor/: package-lock.json  package.json
ai/portfolio-advisor/app/: globals.css  layout.tsx  page.tsx
ai/portfolio-advisor/components/: portfolio-analysis.tsx  wallet-input.tsx
ai/portfolio-advisor/lib/: analyzer.ts
benchmarks/: CLAUDE.md  README.md  package.json  run.sh
benchmarks/src/: latency-bench.ts  report.ts  tps-bench.ts
branding/: brand-guidelines.md
bridges/: CLAUDE.md  README.md
bridges/bitcoin/: README.md
bridges/bitcoin/attestor/: package.json
bridges/bitcoin/program/: Cargo.toml
bridges/bitcoin/program/src/: lib.rs
bridges/ethereum/: README.md
bridges/ethereum/program/: Cargo.toml
bridges/ethereum/relayer/: package.json
bridges/solana/: README.md
bridges/solana/program/: Cargo.toml
bridges/solana/program/src/: lib.rs
bridges/solana/relayer/: package.json
bridges/ui/: package.json
bridges/ui/app/: globals.css  layout.tsx  page.tsx
bridges/ui/components/: bridge-status.tsx  chain-selector.tsx  fee-estimate.tsx  recent-bridges.tsx  token-selector.tsx
bridges/ui/lib/: bridge-client.ts
cli-wallet/: README.md  package-lock.json  package.json
cli-wallet/src/: index.ts  types.ts
cli-wallet/src/commands/: address.ts  airdrop.ts  config.ts  history.ts  info.ts  init.ts  stake.ts
cli-wallet/src/lib/: config.ts
connect-kit/: CLAUDE.md  README.md  package.json
connect-kit/src/: ConnectButton.tsx  SolCloneProvider.tsx  WalletModal.tsx  index.ts  useSolClone.ts  useWallet.ts
dapp-scaffold/: CLAUDE.md  README.md
defi/: CLAUDE.md  README.md
defi/oracle/: README.md
defi/scusd/: README.md
defi/scusd/program/: Cargo.toml
defi/scusd/program/src/: lib.rs
defi/sollend/: README.md
defi/solswap/: README.md
defi/solswap/program/: Cargo.toml
defi/solswap/program/src/: lib.rs
docker/: faucet-server.js
docs/: api-reference.md  developer-guide.md  tokenomics.md  validator-guide.md
docs-site/: CLAUDE.md  docusaurus.config.ts  package-lock.json
docs-site/docs/: anchor-guide.md  cli-reference.md  defi-guide.md  getting-started.md  intro.md  nft-guide.md  sdk-guide.md
ecosystem/: CLAUDE.md  README.md
ecosystem/bounties/: package-lock.json  package.json
ecosystem/grants/: package-lock.json  package.json
ecosystem/launchpad/: README.md
ecosystem/launchpad/program/: Cargo.toml
ecosystem/launchpad/program/src/: lib.rs
ecosystem/profiles/: README.md
ecosystem/profiles/program/: Cargo.toml
ecosystem/profiles/program/src/: lib.rs
ecosystem/validator-marketplace/: package-lock.json  package.json
examples/: create-nft.sh  create-token.sh  deploy-program.sh  run-dapp.sh
explorer/: CLAUDE.md  README.md
faucet/: CLAUDE.md  README.md
faucet/app/: layout.tsx  page.tsx
faucet/components/: faucet-form.tsx
flutter-wallet/: .gitignore  README.md  pubspec.yaml
flutter-wallet/lib/: main.dart
flutter-wallet/test/: widget_test.dart
flutter-wallet/web/: manifest.json
governance/: CLAUDE.md  README.md
governance/program/: Cargo.toml
governance/program/src/: lib.rs
health-dashboard/: CLAUDE.md  README.md
health-dashboard/app/: layout.tsx  page.tsx
metaplex/: package.json  pnpm-lock.yaml
metaplex/configs/: codama.cjs
metaplex/trees/: codama.json
networks/: README.md
networks/devnet/: genesis.json
networks/mainnet/: genesis.json  validator-requirements.md
networks/testnet/: genesis.json
nft-marketplace/: CLAUDE.md  README.md
nft-marketplace/program/: Cargo.toml
ops/ansible/: playbook.yml
ops/backup/: snapshot-backup.sh
ops/monitoring/: alerts.yml  docker-compose.monitoring.yml  prometheus.yml
ops/network/: add-validator.sh  bootstrap-network.sh  genesis-ceremony.sh
ops/runbooks/: incident-response.md  upgrade.md
ops/security/: firewall.sh  hardening.md
ops/terraform/: main.tf  variables.tf
ops/validator/: setup-validator.sh  solclone-validator.service  validator-config.sh
playground/: package-lock.json  package.json
playground/app/: globals.css  layout.tsx  page.tsx
playground/components/: code-editor.tsx  example-selector.tsx  output-panel.tsx  rpc-selector.tsx
playground/lib/: sandbox-runner.ts
privacy/: CLAUDE.md  README.md
privacy/program/: Cargo.toml
privacy/program/src/: lib.rs
program-library/: CLAUDE.md  README.md
scripts/: split-repos.sh  update-split-repos.sh
templates/: CLAUDE.md  README.md
templates/escrow/: README.md
templates/nft-collection/: README.md
templates/nft-collection/programs/: Cargo.toml
templates/nft-collection/programs/src/: lib.rs
templates/staking-pool/: README.md
templates/staking-pool/programs/: Cargo.toml
templates/staking-pool/programs/src/: lib.rs
templates/token/: README.md
templates/voting/: README.md
templates/voting/programs/: Cargo.toml
templates/voting/programs/src/: lib.rs
validator/: CLAUDE.md  README.md
wallet-adapter/: CLAUDE.md  README.md
wallet-connect/: CLAUDE.md  README.md  package.json
wallet-connect/src/: chains.ts  client.ts  index.ts
wallet-gui/: CLAUDE.md  README.md
wallet-standard/: CLAUDE.md  README.md  package.json
wallet-standard/src/: adapter.ts  detect.ts  features.ts  index.ts  register.ts  wallet.ts
web3js-sdk/: CLAUDE.md  README.md
(+115 files in other folders)
