[package]
name = "solmart-nft-marketplace"
version = "0.1.0"
edition = "2021"
description = "SolMart — NFT Marketplace on Prism"
license = "MIT"

[dependencies]
solana-program = "1.17"
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "solmart_nft_marketplace"

[features]
no-entrypoint = []
