[package]
name = "solswap"
version = "0.1.0"
edition = "2021"
description = "SolSwap AMM DEX - Automated Market Maker for Prism"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "solswap"

[dependencies]
solana-program = "1.18"
borsh = "0.10"
borsh-derive = "0.10"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
