[package]
name = "prism-launchpad"
version = "0.1.0"
edition = "2021"
description = "Prism Launchpad - Token launch platform with fixed-price, lottery, and auction modes"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "1.17"
borsh = "0.10"
borsh-derive = "0.10"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
thiserror = "1.0"
